--- a/app/src/main/res/drawable/calc_btn_equal.xml
+++ b/app/src/main/res/drawable/calc_btn_equal.xml
@@ -1,8 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
 
-    <corners android:radius="10dp"/>
-    <solid android:color="@color/calc_btn_equal"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<item android:state_pressed="true">
+    <shape android:shape="rectangle">
+        <corners android:radius="10dp"/>
+        <solid android:color="@color/calc_btn_click"/>
+    </shape>
+</item>
 
-</shape>
+<item>
+    <shape
+        android:shape="rectangle">
+        <corners android:radius="10dp"/>
+        <solid android:color="@color/calc_btn_equal"/>
+
+    </shape>
+</item>
+</selector>
